--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .fondo {
-  background: url("/images/fondoSuelo.svg") no-repeat bottom center,
+  background: url("../../public/images/fondoSuelo.svg") no-repeat bottom center,
     linear-gradient(
       to bottom,
       #4c8695 0%,
