--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -20,7 +20,8 @@
   animation: fadeDown 1.6s ease-out forwards;
 }
 header {
-  background: url("/images/fondoEspacio.svg") no-repeat center center,
+  background: url("../../../../public/images/fondoEspacio.svg") no-repeat center
+      center,
     linear-gradient(to bottom, black 0%, #0f1b1e 15%, #2f555b 70%, #4c8695 100%);
   background-size: contain;
   background-size: cover;
